[package]
name = "nuxp-shell"
version = "0.1.0"
description = "NUXP Shell - Debug frontend for Adobe Illustrator plugin"
authors = ["you"]
edition = "2021"

[lib]
name = "nuxp_shell_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
